TP2/LangageParser.java
// Generated from Langage.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LangageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, Var=37, Number=38, WS=39;
	public static final int
		RULE_constant = 0, RULE_expression = 1, RULE_arguments = 2, RULE_type = 3, 
		RULE_instruction = 4, RULE_functDefinition = 5, RULE_definitions = 6, 
		RULE_prg = 7, RULE_typedVariables = 8, RULE_variable = 9;
	public static final String[] ruleNames = {
		"constant", "expression", "arguments", "type", "instruction", "functDefinition", 
		"definitions", "prg", "typedVariables", "variable"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'true'", "'false'", "'-'", "'not'", "'+'", "'*'", "'/'", "'and'", 
		"'or'", "'<'", "'<='", "'='", "'!='", "'>='", "'>'", "'read'", "'write'", 
		"'['", "']'", "'new'", "'array'", "'of'", "'('", "')'", "'integer'", "'boolean'", 
		"'arrayof'", "':'", "'if'", "'then'", "'else'", "'while'", "'do'", "'skip'", 
		"';'", "'var'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "Var", "Number", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Langage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LangageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ConstantContext extends ParserRuleContext {
		public PPExpr value;
		public Token input;
		public TerminalNode Number() { return getToken(LangageParser.Number, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LangageListener ) ((LangageListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LangageListener ) ((LangageListener)listener).exitConstant(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_constant);
		try {
			setState(26);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Number:
				enterOuterAlt(_localctx, 1);
				{
				setState(20);
				((ConstantContext)_localctx).input = match(Number);
				((ConstantContext)_localctx).value =  new PPCte(Integer.parseInt((((ConstantContext)_localctx).input!=null?((ConstantContext)_localctx).input.getText():null)));
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(22);
				match(T__0);
				((ConstantContext)_localctx).value =  new PPTrue();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 3);
				{
				setState(24);
				match(T__1);
				((ConstantContext)_localctx).value =  new PPFalse();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public PPExpr value;
		public ExpressionContext e5;
		public ExpressionContext e7;
		public ExpressionContext e9;
		public ExpressionContext e11;
		public ExpressionContext e13;
		public ExpressionContext e15;
		public ExpressionContext e17;
		public ExpressionContext e19;
		public ExpressionContext e21;
		public ExpressionContext e23;
		public ExpressionContext e25;
		public ExpressionContext e27;
		public ExpressionContext array;
		public ConstantContext e1;
		public Token e2;
		public ExpressionContext e3;
		public ExpressionContext e4;
		public ArgumentsContext a1;
		public ArgumentsContext a2;
		public Token name;
		public ArgumentsContext a3;
		public TypeContext t;
		public ExpressionContext i;
		public ExpressionContext e6;
		public ExpressionContext e8;
		public ExpressionContext e10;
		public ExpressionContext e12;
		public ExpressionContext e14;
		public ExpressionContext e16;
		public ExpressionContext e18;
		public ExpressionContext e20;
		public ExpressionContext e22;
		public ExpressionContext e24;
		public ExpressionContext e26;
		public ExpressionContext e28;
		public ExpressionContext index;
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public TerminalNode Var() { return getToken(LangageParser.Var, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LangageListener ) ((LangageListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LangageListener ) ((LangageListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(29);
				((ExpressionContext)_localctx).e1 = constant();
				((ExpressionContext)_localctx).value =  ((ExpressionContext)_localctx).e1.value;
				}
				break;
			case 2:
				{
				setState(32);
				((ExpressionContext)_localctx).e2 = match(Var);
				((ExpressionContext)_localctx).value =  new PPVar((((ExpressionContext)_localctx).e2!=null?((ExpressionContext)_localctx).e2.getText():null));
				}
				break;
			case 3:
				{
				setState(34);
				match(T__2);
				setState(35);
				((ExpressionContext)_localctx).e3 = expression(19);
				((ExpressionContext)_localctx).value =  new PPInv(((ExpressionContext)_localctx).e3.value);
				}
				break;
			case 4:
				{
				setState(38);
				match(T__3);
				setState(39);
				((ExpressionContext)_localctx).e4 = expression(18);
				((ExpressionContext)_localctx).value =  new PPNot(((ExpressionContext)_localctx).e4.value);
				}
				break;
			case 5:
				{
				setState(42);
				match(T__15);
				setState(43);
				((ExpressionContext)_localctx).a1 = arguments();
				((ExpressionContext)_localctx).value =  new PPFunCall(new Read(), ((ExpressionContext)_localctx).a1.value);
				}
				break;
			case 6:
				{
				setState(46);
				match(T__16);
				setState(47);
				((ExpressionContext)_localctx).a2 = arguments();
				((ExpressionContext)_localctx).value =  new PPFunCall(new Write(), ((ExpressionContext)_localctx).a2.value);
				}
				break;
			case 7:
				{
				setState(50);
				((ExpressionContext)_localctx).name = match(Var);
				setState(51);
				((ExpressionContext)_localctx).a3 = arguments();
				((ExpressionContext)_localctx).value =  new PPFunCall(new User((((ExpressionContext)_localctx).name!=null?((ExpressionContext)_localctx).name.getText():null)), ((ExpressionContext)_localctx).a3.value);
				}
				break;
			case 8:
				{
				setState(54);
				match(T__19);
				setState(55);
				match(T__20);
				setState(56);
				match(T__21);
				setState(57);
				((ExpressionContext)_localctx).t = type();
				setState(58);
				match(T__17);
				setState(59);
				((ExpressionContext)_localctx).i = expression(0);
				setState(60);
				match(T__18);
				((ExpressionContext)_localctx).value =  new PPArrayAlloc(((ExpressionContext)_localctx).t.value, ((ExpressionContext)_localctx).i.value);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(133);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(131);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e5 = _prevctx;
						_localctx.e5 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(65);
						if (!(precpred(_ctx, 17))) throw new FailedPredicateException(this, "precpred(_ctx, 17)");
						setState(66);
						match(T__4);
						setState(67);
						((ExpressionContext)_localctx).e6 = expression(18);
						((ExpressionContext)_localctx).value =  new PPAdd(((ExpressionContext)_localctx).e5.value, ((ExpressionContext)_localctx).e6.value);
						}
						break;
					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e7 = _prevctx;
						_localctx.e7 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(70);
						if (!(precpred(_ctx, 16))) throw new FailedPredicateException(this, "precpred(_ctx, 16)");
						setState(71);
						match(T__2);
						setState(72);
						((ExpressionContext)_localctx).e8 = expression(17);
						((ExpressionContext)_localctx).value =  new PPSub(((ExpressionContext)_localctx).e7.value, ((ExpressionContext)_localctx).e8.value);
						}
						break;
					case 3:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e9 = _prevctx;
						_localctx.e9 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(75);
						if (!(precpred(_ctx, 15))) throw new FailedPredicateException(this, "precpred(_ctx, 15)");
						setState(76);
						match(T__5);
						setState(77);
						((ExpressionContext)_localctx).e10 = expression(16);
						((ExpressionContext)_localctx).value =  new PPMul(((ExpressionContext)_localctx).e9.value, ((ExpressionContext)_localctx).e10.value);
						}
						break;
					case 4:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e11 = _prevctx;
						_localctx.e11 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(80);
						if (!(precpred(_ctx, 14))) throw new FailedPredicateException(this, "precpred(_ctx, 14)");
						setState(81);
						match(T__6);
						setState(82);
						((ExpressionContext)_localctx).e12 = expression(15);
						((ExpressionContext)_localctx).value =  new PPDiv(((ExpressionContext)_localctx).e11.value, ((ExpressionContext)_localctx).e12.value);
						}
						break;
					case 5:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e13 = _prevctx;
						_localctx.e13 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(85);
						if (!(precpred(_ctx, 13))) throw new FailedPredicateException(this, "precpred(_ctx, 13)");
						setState(86);
						match(T__7);
						setState(87);
						((ExpressionContext)_localctx).e14 = expression(14);
						((ExpressionContext)_localctx).value =  new PPAnd(((ExpressionContext)_localctx).e13.value, ((ExpressionContext)_localctx).e14.value);
						}
						break;
					case 6:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e15 = _prevctx;
						_localctx.e15 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(90);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(91);
						match(T__8);
						setState(92);
						((ExpressionContext)_localctx).e16 = expression(13);
						((ExpressionContext)_localctx).value =  new PPOr(((ExpressionContext)_localctx).e15.value, ((ExpressionContext)_localctx).e16.value);
						}
						break;
					case 7:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e17 = _prevctx;
						_localctx.e17 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(95);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(96);
						match(T__9);
						setState(97);
						((ExpressionContext)_localctx).e18 = expression(12);
						((ExpressionContext)_localctx).value =  new PPLt(((ExpressionContext)_localctx).e17.value, ((ExpressionContext)_localctx).e18.value);
						}
						break;
					case 8:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e19 = _prevctx;
						_localctx.e19 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(100);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(101);
						match(T__10);
						setState(102);
						((ExpressionContext)_localctx).e20 = expression(11);
						((ExpressionContext)_localctx).value =  new PPLe(((ExpressionContext)_localctx).e19.value, ((ExpressionContext)_localctx).e20.value);
						}
						break;
					case 9:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e21 = _prevctx;
						_localctx.e21 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(105);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(106);
						match(T__11);
						setState(107);
						((ExpressionContext)_localctx).e22 = expression(10);
						((ExpressionContext)_localctx).value =  new PPEq(((ExpressionContext)_localctx).e21.value, ((ExpressionContext)_localctx).e22.value);
						}
						break;
					case 10:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e23 = _prevctx;
						_localctx.e23 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(110);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(111);
						match(T__12);
						setState(112);
						((ExpressionContext)_localctx).e24 = expression(9);
						((ExpressionContext)_localctx).value =  new PPNe(((ExpressionContext)_localctx).e23.value, ((ExpressionContext)_localctx).e24.value);
						}
						break;
					case 11:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e25 = _prevctx;
						_localctx.e25 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(115);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(116);
						match(T__13);
						setState(117);
						((ExpressionContext)_localctx).e26 = expression(8);
						((ExpressionContext)_localctx).value =  new PPGe(((ExpressionContext)_localctx).e25.value, ((ExpressionContext)_localctx).e26.value);
						}
						break;
					case 12:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e27 = _prevctx;
						_localctx.e27 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(120);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(121);
						match(T__14);
						setState(122);
						((ExpressionContext)_localctx).e28 = expression(7);
						((ExpressionContext)_localctx).value =  new PPGt(((ExpressionContext)_localctx).e27.value, ((ExpressionContext)_localctx).e28.value);
						}
						break;
					case 13:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.array = _prevctx;
						_localctx.array = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(125);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(126);
						match(T__17);
						setState(127);
						((ExpressionContext)_localctx).index = expression(0);
						setState(128);
						match(T__18);
						((ExpressionContext)_localctx).value =  new PPArrayGet(((ExpressionContext)_localctx).array.value, ((ExpressionContext)_localctx).index.value);
						}
						break;
					}
					} 
				}
				setState(135);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ArgumentsContext extends ParserRuleContext {
		public ArrayList<PPExpr> value;
		public ExpressionContext e;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LangageListener ) ((LangageListener)listener).enterArguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LangageListener ) ((LangageListener)listener).exitArguments(this);
		}
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_arguments);
		((ArgumentsContext)_localctx).value =  new ArrayList<PPExpr>();
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(T__22);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__15) | (1L << T__16) | (1L << T__19) | (1L << Var) | (1L << Number))) != 0)) {
				{
				{
				setState(137);
				((ArgumentsContext)_localctx).e = expression(0);
				_localctx.value.add(((ArgumentsContext)_localctx).e.value);
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(145);
			match(T__23);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type value;
		public TypeContext t;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LangageListener ) ((LangageListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LangageListener ) ((LangageListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		try {
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__24:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				match(T__24);
				((TypeContext)_localctx).value =  new Int();
				}
				break;
			case T__25:
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				match(T__25);
				((TypeContext)_localctx).value =  new Bool();
				}
				break;
			case T__26:
				enterOuterAlt(_localctx, 3);
				{
				setState(151);
				match(T__26);
				setState(152);
				((TypeContext)_localctx).t = type();
				((TypeContext)_localctx).value =  new Array(((TypeContext)_localctx).t.value);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public PPInst value;
		public InstructionContext i1;
		public Token v;
		public ExpressionContext e1;
		public ExpressionContext array;
		public ExpressionContext index;
		public ExpressionContext val;
		public ExpressionContext condition;
		public InstructionContext ifTrue;
		public InstructionContext ifFalse;
		public ExpressionContext condition2;
		public InstructionContext inst;
		public ArgumentsContext a1;
		public ArgumentsContext a2;
		public Token name;
		public ArgumentsContext a3;
		public InstructionContext i2;
		public TerminalNode Var() { return getToken(LangageParser.Var, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LangageListener ) ((LangageListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LangageListener ) ((LangageListener)listener).exitInstruction(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		return instruction(0);
	}
